# AI_Agents

./: .env.example  .gitignore  Dockerfile.api  README.md  main.py  pyproject.toml  railway.toml  streamlit_app.py
.github/workflows/: ci.yml
docs/: CLAIMS_SOURCE_NOTES.md  DEMO_AND_DEPLOY.md  MVP_ROADMAP.md  NCCI_IMPORT.md  PRODUCTION_ARCHITECTURE.md  SUPABASE_SETUP.md
domains/claims_anomaly/examples/: clean_em_837p.edi  medical_necessity_failure_837p.edi  ncci_allowed_modifier_837p.edi  ncci_violation_837p.edi  oig_excluded_837p.edi
domains/claims_anomaly/reference_data/: schema.sql  seed.sql
domains/claims_anomaly/rules/: claims_anomaly.yaml
rules/: agent_rules.yaml
src/ai_agents/: __init__.py  agent.py  cli.py  config.py  demo_api.py  planner.py  providers.py  rules.py  tools.py  workflow.py
src/ai_agents/domains/: __init__.py  claims_837.py  claims_anomaly.py  ncci_importer.py
supabase/: load_ncci_ptp_from_csv.sql  seed_claims_reference.sql
supabase/migrations/: 001_claims_reference.sql
tests/: test_agent.py  test_config.py  test_demo_api.py  test_planner.py  test_providers.py  test_rules.py  test_supabase_schema.py  test_tools.py  test_workflow.py
tests/domains/: test_claims_837.py  test_claims_anomaly.py  test_claims_safety.py  test_ncci_extract.py  test_ncci_importer.py
tests/e2e/: test_837_claims_flow.py  test_claims_domain_flow.py  test_cli_workflow.py
