[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Standalone workspace for AI agent MVPs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
api = []
dev = ["httpx>=0.27", "pytest>=8.0"]
openai = ["openai>=2.0.0"]
postgres = ["psycopg[binary]>=3.2"]
excel = ["openpyxl>=3.1"]
ui = ["streamlit>=1.36", "requests>=2.32"]

[project.scripts]
ai-agents = "ai_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
